Bug 408716 - Subsequent "Get New" things in System Settings display items from the first search.
Summary: Subsequent "Get New" things in System Settings display items from the first s...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.59.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
: 413049 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-06-14 22:19 UTC by Eridani Rodríguez
Modified: 2019-10-21 15:48 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.64
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eridani Rodríguez 2019-06-14 22:19:45 UTC
SUMMARY
When wanting to install customizations trough System Settings "Get New ..." buttons. The window to download stuff always shows the items from the first category you opened the "Download New ..." for.

(Free translation as my system isn't in english)


STEPS TO REPRODUCE
1. Open System Settings and navigate to Color schemes section, hit "Get new ..." button.
2. Close the "Download new ..." window
3. Navigate to Workspace themes and hit the "Get new ..." button


OBSERVED RESULT
1. The window will display the search for color schemes
2. Same happen the other way around and with other sections combinations (Icons & Cursors, Cursors & Colors, etc.), it always shows the first thing you searched for.
3. Desktop Effects, SDDM and Start Up themes doesn't seem to be affected.

EXPECTED RESULT
It should show the results for the current category.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.16
KDE Plasma Version: 5.16.0
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.3
Kernel Version: 4.15.0-51-generic
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-4670 CPU @ 3.40GHz
Memory: 15.6 GiB
 

ADDITIONAL INFORMATION
I think this bug was introduced with the recent update to Plasma 5.16 because I don't recall experiencing it in 5.15.
Comment 1 Rik Mills 2019-10-16 09:15:26 UTC
Seen in latest Neon packages:

Plasma 5.17.0
Frameworks 5.63.0
Qt 5.13.1

Also in seen in Kubuntu 19.10:

Plasma 5.16.5
Frameworks 5.62
Qt 5.12.4
Comment 2 Antonio Rojas 2019-10-16 20:12:45 UTC
*** Bug 413049 has been marked as a duplicate of this bug. ***
Comment 3 Dan Leinir Turthra Jensen 2019-10-21 08:08:42 UTC
Git commit 8977627cab850815e0d1dbfd0eab50dd9d4a3ddc by Dan Leinir Turthra Jensen.
Committed on 21/10/2019 at 08:08.
Pushed by leinir into branch 'master'.

Fix KNSCore::Cache fetching when initialising Engine

Summary:
During the moving-around of the config files, the Cache was left
behind unfixed, and we ended up with all caches being the same,
because we attempted to request a cache for a config file which
was not found, and consequently resulted in the requested cache
being named "", which consequently failed rather badly.

Reviewers: rikmills, #frameworks, #knewstuff

Reviewed By: rikmills

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D24754

M  +4    -1    src/core/engine.cpp

https://commits.kde.org/knewstuff/8977627cab850815e0d1dbfd0eab50dd9d4a3ddc