Fix KNSCore::Cache fetching when initialising Engine

Summary:
During the moving-around of the config files, the Cache was left
behind unfixed, and we ended up with all caches being the same,
because we attempted to request a cache for a config file which
was not found, and consequently resulted in the requested cache
being named "", which consequently failed rather badly.

BUG:408716

Reviewers: rikmills, #frameworks, #knewstuff

Reviewed By: rikmills

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D24754